# python_dev_template

./: .gitignore  .gitlab-ci.yml  README.md  Taskfile.yml  _version_.txt  config.ini  main.py  mkdocs.yml  notes.md  pyproject.toml  update_version.py
docs/: index.md  main.md  mymodule.md  rules.md  tools.md
mymodule/: rules.py  tools.py
public/: 404.html  index.html  objects.inv
public/main/: index.html
public/mymodule/: index.html
public/rules/: index.html
public/search/: search_index.json
public/tools/: index.html
site/: 404.html  objects.inv
site/my_page/: index.html
site/search/: search_index.json
